--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -14,6 +14,15 @@
 	</properties>
 
 	<dependencies>
+	
+		<!-- Linking back end project -->
+		<dependency>
+			<groupId>com.gutshaven</groupId>
+			<artifactId>shoppingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
 		<!-- JAVA EE API -->
 		<dependency>
 			<groupId>javax</groupId>
@@ -30,13 +39,13 @@
 			<scope>test</scope>
 		</dependency>
 
-	<!-- SPRING -->
+		<!-- SPRING -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- JSTL -->
 		<dependency>
 			<groupId>jstl</groupId>
