--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 		<!-- H2 Database -->
 		<dependency>
@@ -104,6 +110,18 @@
 			<version>1.7.24</version>
 		</dependency>
 
+		<!-- Validation Dependencies -->
+		<dependency>
+			<groupId>org.hibernate</groupId> 
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.4.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
 
 	</dependencies>
 	<build>
